# resonix-desktop

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  device_hotplug.rs  lib.rs  main.rs
src-tauri/src/audio/: buffer.rs  decoder.rs  engine.rs  mod.rs  output.rs  runtime.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/tauri_commands/: audio.rs  common.rs  ingestion.rs  library.rs  mod.rs  playlists.rs  search.rs  settings.rs
src/components/: CreateFab.vue  LibraryList.vue  PlayerBar.vue  SettingsModal.vue
src/components/modals/: AlbumModal.vue  ArtistModal.vue  SettingsModal.vue  TrackModal.vue
src/stores/: library.ts  player.ts  ui.ts
src/styles/: main.scss
src/styles/abstracts/: _mixins.scss  _variables.scss
src/styles/base/: _reset.scss
src/styles/components/: _buttons.scss  _player.scss
src/types/: track.ts
src/views/: Home.vue
ui/: api.ts  index.html  main.ts  models.ts  package.json  tsconfig.json  vite.config.ts
ui/components/: BottomPlayer.ts  CreateFAB.ts  TrackCard.ts
ui/src/: app.ts  main.ts
ui/src/pages/: Library.ts
ui/src/services/: AudioService.ts  TauriService.ts
ui/src/stores/: LibraryStore.ts  PlayerStore.ts  SettingsStore.ts
ui/src/styles/: _reset.scss  _variables.scss  main.scss
ui/state/: libraryStore.ts  playerStore.ts
ui/styles/: main.scss
ui/views/: Albums.ts  Artists.ts  Home.ts  Playlists.ts  Settings.ts  Tracks.ts  Unregistered.ts
(+7 files in other folders)
